cree archivo base y herede en home

--- a/cesfam/Templates/cesfam/home.html
+++ b/cesfam/Templates/cesfam/home.html
@@ -1,43 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CESFAM CRUZ MELO</title> <!-- Título de la pestaña -->
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jQuery-Validation-Engine/2.6.4/validationEngine.jquery.min.css"/>
-    <link rel="stylesheet" 
-    href="https://cdnjs.cloudflare.com/ajax/libs/jQuery-Validation-Engine/2.6.4/validationEngine.jquery.min.css" 
-    integrity="sha512-fvBUZJJBrJrzrFYM/EN2isPokoNnx331y30ZXIxRRlop1aq6rT6d8oY6WJVsiXZoso0dIZ2nbQjtGLi6Kkxr/Q==" crossorigin="anonymous" />
-    <script src="./js/bootstrap.min.js"></script>
-    
-  </head>
+ {% extends "cesfam/base.html" %}
 
-
-  <body>
-
-    <nav class="navbar">
-      <div class="container-fluid">
-        <img src="./img/logo_independencia.png"class="d-inline-block align-text-top">
-        <form class="d-flex" id="buscaForm">
-          <input class="form-control me-2" type="search" placeholder="  " aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>  CESFAM Dr. Agustin Cruz Melo
-      </div>
-    </nav>
-    
-    <!-- Segundo navbar, menu -->
-
-    <div class="container-row">
-      <nav class="nav nav-pills flex-column flex-sm-row">
-        <a class="flex-sm-fill text-sm-center nav-link" href="login.html">Mi cuenta</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="index.html">Home</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="farmacia.html">farmacia</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="vacunatorio.html">Vacunas</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="reserv_hora.html">Reservar hora</a>
-      </nav>
-    </div>
+{% block  %}
 
               <!-- Inicio del carrusel-->
 <div class="container-fluid">
@@ -80,8 +43,4 @@
 </div>
 </div>
 
-
-
-   
-  </body>
-</html>
+{% endblock  %}
