--- a/cesfam/Templates/cesfam/base.html
+++ b/cesfam/Templates/cesfam/base.html
@@ -35,7 +35,7 @@
       <nav class="nav nav-pills flex-column flex-sm-row">
         <a class="flex-sm-fill text-sm-center nav-link" href="login.html">Mi cuenta</a>
         <a class="flex-sm-fill text-sm-center nav-link" href="home.html">Home</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="farmacia.html">farmacia</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href="farmacia.html">Farmacia</a>
         <a class="flex-sm-fill text-sm-center nav-link" href="vacunatorio.html">Vacunas</a>
         <a class="flex-sm-fill text-sm-center nav-link" href="reserv_hora.html">Reservar hora</a>
       </nav>
