cambie direccionamiento a codigo django

--- a/cesfam/Templates/cesfam/base.html
+++ b/cesfam/Templates/cesfam/base.html
@@ -33,11 +33,11 @@
 
     <div class="container-row">
       <nav class="nav nav-pills flex-column flex-sm-row">
-        <a class="flex-sm-fill text-sm-center nav-link" href="login.html">Mi cuenta</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="home.html">Home</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="farmacia">Farmacia</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="vacunatorio.html">Vacunas</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="reserv_hora.html">Reservar hora</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href=" ">Mi cuenta</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href="{% urls 'home' %}">Home</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href="{% urls 'farmacia' %}">Farmacia</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href=" ">Vacunas</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href=" ">Reservar hora</a>
       </nav>
     </div>
 
