arregle error, no agregar s

--- a/cesfam/Templates/cesfam/base.html
+++ b/cesfam/Templates/cesfam/base.html
@@ -34,8 +34,8 @@
     <div class="container-row">
       <nav class="nav nav-pills flex-column flex-sm-row">
         <a class="flex-sm-fill text-sm-center nav-link" href=" ">Mi cuenta</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="{% urls 'home' %}">Home</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="{% urls 'farmacia' %}">Farmacia</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href="{% url 'home' %}">Home</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href="{% url 'farmacia' %}">Farmacia</a>
         <a class="flex-sm-fill text-sm-center nav-link" href=" ">Vacunas</a>
         <a class="flex-sm-fill text-sm-center nav-link" href=" ">Reservar hora</a>
       </nav>
