--- a/cesfam/Templates/cesfam/base.html
+++ b/cesfam/Templates/cesfam/base.html
@@ -38,6 +38,19 @@
         <a class="flex-sm-fill text-sm-center nav-link" href="{% url 'farmacia' %}">Farmacia</a>
         <a class="flex-sm-fill text-sm-center nav-link" href=" ">Vacunas</a>
         <a class="flex-sm-fill text-sm-center nav-link" href=" ">Reservar hora</a>
+        {% if user.is_authenticated %}
+        <li>
+        <a class="flex-sm-fill text-sm-center nav-link" href="{% url 'logout' %}">Cerrar Sesión</a>
+        </li>
+        <li>
+        <a class="flex-sm-fill text-sm-center nav-link" href="#">{{ user.username }}</a>
+        </li>
+        {% else %}
+        <li>
+        <a class="flex-sm-fill text-sm-center nav-link" href="{% url 'login' %}">Iniciar Sesión</a>
+        </li>
+
+        {% endif %}
       </nav>
     </div>
 
