agregue formulario registro

--- a/cesfam/Templates/registration/login.html
+++ b/cesfam/Templates/registration/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'cesfam/css/bootstrap.min.css' %}">
 
 
-    <title>CESFAM CRUZ MELO</title> <!-- Título de la pestaña -->
+    <title>Ingreso al sistema</title> <!-- Título de la pestaña -->
     
   </head>
     
@@ -34,7 +34,7 @@
             <br>
             <a href="{% url 'home' %}">Ir al home</a>
             <br>
-            <a href="#">Crear cuenta</a>
+            <a href="{% url 'registro' %}">Crear cuenta</a>
             <br>
 
         </form>
