--- a/cesfam/Templates/registration/registro.html
+++ b/cesfam/Templates/registration/registro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    {% load cryspy_forms_tags %}
+    {% load crispy_forms_tags %}
      {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,8 +26,7 @@
 
     
     <div class="container">
-    <br>
-    <br>
+    
     <br>
     <div class="row">
         <div class="col-12 col-md-6 offset-md-3">
@@ -40,7 +39,7 @@
 
                         {% csrf_token %}
 
-                        {{ form | cryspy }}
+                        {{ form | crispy }}
 
                         <input type="submit" value="Registrar">
                         <br>
