--- a/cesfam/Templates/cesfam/crud_farmacia/agregar.html
+++ b/cesfam/Templates/cesfam/crud_farmacia/agregar.html
@@ -2,21 +2,30 @@
 
 {% block contenido %}
 
-<div class="card">
-    <div class="card-body">
-        <div class="row">
-            <div class="col-12 col-md-6 offset-md-3">
-                <form action = "" method ="post">
+{% load crispy_forms_tags %}
+
+
+<br>
+<br>
+<div class="row">
+    <div class="col-12 col-md-6 offset-md-3">
+        <div class="card">
+            <div class="card-body">
+            <h5>Agregar producto</h5>
+            <hr>
+                <form action = "" method ="post" enctype="multipart/form-data">
+
                     {% csrf_token %}
 
-                    {{ form }}
+                    {{ form | crispy}}
                 
-                    <div class="d-flex justify-content-center">
-                    <input type="reset" value="cancelar" class="btn btn-secunday">
-                    <input type="submit" value="guardar" class="btn btn-primary">
+                    <div class="d-flex justify-content-end">
+                        <input type="reset" value="cancelar" class="btn btn-secunday">
+                        <input type="submit" value="guardar" class="btn btn-primary">
 
                     </div>
                 </form>
+                {{ mensaje }}
             </div>
         </div>
     </div>
