--- a/cesfam/Templates/cesfam/crud_farmacia/listar.html
+++ b/cesfam/Templates/cesfam/crud_farmacia/listar.html
@@ -5,7 +5,7 @@
 <br>
 <br>
 <div class="card">
-    <div class="card body">
+    <div class="card-body">
         <h2>Listado de productos</h2>
         <table class="table table-striped table-hover table-responsive">
             <tr>
