eliminar producto listo

--- a/cesfam/Templates/cesfam/crud_farmacia/listar.html
+++ b/cesfam/Templates/cesfam/crud_farmacia/listar.html
@@ -12,11 +12,17 @@
             <tr>
                 <th>Medicamento</th>
                 <th>stock</th>
+                <th>Opción</th>
             </tr>
+
         {% for p in productos %}
-        <tr>
-                <th>{{ p.nombre }}</th>
-                <th>{{ p.stock }}</th>
+            <tr>
+                <td>{{ p.nombre }}</td>
+                <td>{{ p.stock }}</td>
+                <td>
+                    <a href="{% url 'editar_producto' p.id %}" class="btn btn-warning btn-sm">Editar</a>
+                    <a href="{% url 'eliminar_producto' p.id %}" class="btn btn-warning btn-sm">Eliminar</a>
+                </td>
             </tr>
 
         {% endfor %}
