--- a/cesfam/Templates/cesfam/base.html
+++ b/cesfam/Templates/cesfam/base.html
@@ -47,6 +47,8 @@
         <a class="flex-sm-fill text-sm-center nav-link" href="{% url 'farmacia' %}">Farmacia</a>
         <a class="flex-sm-fill text-sm-center nav-link" href="{% url 'agregar_producto' %}">Agregar Medicamento</a>
         <a class="flex-sm-fill text-sm-center nav-link" href="{% url 'listar_producto' %}">Lista de Medicamentos</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href="{% url 'agregar_medico' %}">Nuevo Doctor</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href="{% url 'listar_medico' %}">Lista Doctores</a>
       </nav>
     </div>
 
