agregue formulario agendar por vista y forms

--- a/cesfam/Templates/cesfam/base.html
+++ b/cesfam/Templates/cesfam/base.html
@@ -45,6 +45,7 @@
         {% endif %}
         <a class="flex-sm-fill text-sm-center nav-link" href="{% url 'home' %}">Home</a>
         <a class="flex-sm-fill text-sm-center nav-link" href="{% url 'farmacia' %}">Farmacia</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href="{% url 'agendar' %}">Reservar Hora</a>
         <a class="flex-sm-fill text-sm-center nav-link" href="{% url 'agregar_producto' %}">Agregar Medicamento</a>
         <a class="flex-sm-fill text-sm-center nav-link" href="{% url 'listar_producto' %}">Lista de Medicamentos</a>
         <a class="flex-sm-fill text-sm-center nav-link" href="{% url 'agregar_medico' %}">Nuevo Doctor</a>
