--- a/cesfam/Templates/cesfam/crud_farmacia/listar.html
+++ b/cesfam/Templates/cesfam/crud_farmacia/listar.html
@@ -20,8 +20,12 @@
                 <td>{{ p.nombre }}</td>
                 <td>{{ p.stock }}</td>
                 <td>
+                    {% if perms.cesfam.change_producto %}
                     <a href="{% url 'editar_producto' p.id %}" class="btn btn-warning btn-sm">Editar</a>
+                    {% endif %}
+                    {% if perms.cesfam.delete_producto %}
                     <a href="{% url 'eliminar_producto' p.id %}" class="btn btn-warning btn-sm">Eliminar</a>
+                    {% endif %}
                 </td>
             </tr>
 
